# mleko-os

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  boot-qemu.sh  build.ps1  build.sh  buildmacos.sh  compile_flags.txt  configure  format.sh  gen_compile_commands.py  interrupts.cpp  interrupts.h  interruptstubs.s  kernel.cpp  linker.ld  loader.s  port.cpp  port.h  rust-toolchain.toml
.cargo/: config.toml
deprecated/: Makefile  gdt.h  interrupts.h
include/: kernel.hh  uart.hh
old-rs/: configure
old-rs/src/: interrupts.rs
old-rs2/src/kernel/: acpi.rs  bootasm.S  entryother.S  file.rs  kalloc.rs  kbd.rs  log.rs  main.rs
old-rs2/src/kernel/include/: file.rs  syscall.rs  user.rs
scripts/: boot-qemu.sh  build.ps1  build.sh  buildmacos.sh  configure
src/: basic_boot.rs  boot.S  kernel.cc  lib.rs  main.rs  uart.cc  vga_buffer.rs
src/boot/: boot.S
src/include/: acpi.rs  asm.rs  cpuid.rs  elf.rs  fs.rs  gdt.hh  idt.hh  isr.hh  kbd.rs  kernel.h  kernel.hh  memlayout.rs  mp.rs  pic.hh  print.hh  spinlock.rs  stat.rs  types.rs  x86.rs
src/kernel/: bio.rs  bootmain.rs  cpuid.rs  entry.S  entry64.S  exec.rs  fs.rs  gdt.S  gdt.cc  ide.rs  idt.S  idt.cc  ioapic.rs  isr.S  isr.cc  kernel.c  kernel.cc  kernel.ld  kernel64.ld  main.rs  pic.cc  print.cc
src/kernel/include/: date.rs  defs.rs  mmu.rs  param.rs  traps.rs
src/mkfs/: Cargo.toml
sunset/deprecated/: gdt.cpp  interruptstubs.s  loader.s  port.h  types.h
sunset/old-rs/: Cargo.toml  configure.ps1  x86_64-mleko.json
sunset/old-rs/.cargo/: config.toml
sunset/old-rs2/src/kernel/: console.rs  initcode64.S  lapic.rs
sunset/old-rs2/src/kernel/include/: buf.rs  fcntl.rs  proc.rs  x86.rs
templates/: header.h
tests/: basic_boot.rs  should_panic.rs
