[package]
name = "mlekoczekoladowe"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

#// DO NOTE THAT IN CARGO AS OF TO MY KNOWLEDGE 2019 AND EVEN NOW IN 2024 
#// THERE IS A BUG IN CARGO WHERE THERE ARE "duplicate lang item" ERRORS 
#// ON CARGO TEST IN SOME CASES. TO FIX REMOVE/COMMENT OUT THE ' panic = "abort" ' 
#// FOR A PROFILE IN THE CARGO.TOML FILE
# the profile used for `cargo build`
#[profile.dev]
#panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
#[profile.release]
#panic = "abort" # disable stack unwinding on panic

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
     "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
     "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

[[test]]
name = "should_panic"
harness = false
